@@ -86,7 +86,14 @@ class Contour(plotters.GenericPlotter):
                6, readonly=True )
 
         s.add( setting.LineSet('lines',
-                               [('black', '1pt', 'solid', False)]) )
+                               [('solid', '1pt', 'black', False)],
+                               descr = 'Line styles to plot the contours '
+                               'using'),
+               7 )
+
+        s.add( setting.FillSet('fills', [],
+                               descr = 'Fill styles to plot between contours'),
+               8 )
 
         # keep track of settings so we recalculate when necessary
         self.lastdataset = None
